# SPDX-FileCopyrightText: 2026 Stan Grams <sjg@haxx.space>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "map2art"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7"
actix-web = "4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
lru = "0.12"
png = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
resvg = "0.45"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
